updated gulpfile and added anvil scss

--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
         <title>New Site</title>
         <!--build:css css/styles.min.css-->
         <!-- Put all css files here -->
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="css/main-style.css">
         <!--endbuild-->
     </head>
 
