--- a/app/index.html
+++ b/app/index.html
@@ -1,6 +1,18 @@
+<!DOCTYPE html>
 <html>
     <head>
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="HandheldFriendly" content="True">
+        <meta name="MobileOptimized" content="320">
+        <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
+
         <title>New Site</title>
+
+        <script>
+            FontAwesomeConfig = { searchPseudoElements: true };
+        </script>
+        <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
+
         <!--build:css css/styles.min.css-->
         <!-- Put all css files here -->
         <link rel="stylesheet" href="css/main-style.css">
@@ -14,6 +26,8 @@
 
     <!--build:js js/main.min.js -->
     <!-- Put all script files here -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.6.0/slick.min.js"></script> -->
     <script src="js/scripts.js"></script>
     <!-- endbuild -->
     </body>
